--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -7,7 +7,7 @@ BLUE		=	\033[1;34m
 CYAN		=	\033[1;36m
 DEFAULT		=	\033[0m
 SUPPR		=	\r\033[2K
-NAME		=	Span
+NAME		=	MutantStack
 
 # --------------- FILES --------------- #
 
